<?xml version="1.0"?>
<package format="2">
  <name>dd_collision_avoidance</name>
  <version>0.0.0</version>
  <description>The dd_collision_avoidance package</description>

  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <nodelet plugin="${prefix}/dd_collision_avoidance_nodelet.xml" />
    <nodelet plugin="${prefix}/laserscan_to_pointcloud_nodelet.xml" />

  </export>
</package>
